# bubbles

./: CMakeLists.txt  bubble.cpp  bubble.h  bubblefactory.cpp  bubblefactory.h  field.cpp  field.h  main.cpp  recorder.cpp  recorder.h
res/: points.png~  record.png~
